<resources>
    <string name="app_name">SolucionLab11</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="episodes">Episodes</string>
    <string name="characters">Characters</string>
    <string name="character_detail">Character Detail</string>
    <string name="error_fetching">Error al llamar al API</string>
    <string name="error_email_password">Correo o contraseña incorrecta</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="my_email">jcdurini@uvg.edu.gt</string>
    <string name="delete">Eliminar</string>
    <string name="sync">Sincronizar</string>
    <string name="order_asc"><![CDATA[A -> Z]]></string>
    <string name="order_desc"><![CDATA[Z -> A]]></string>
    <string name="logout">Cerrar sesión</string>
    <string name="name">Name</string>
    <string name="save">Guardar</string>
    <string name="error_character_not_found">Error, personaje no se encuentra en base de datos</string>
    <string name="successful_update">Personaje actualizado exitosamente</string>
    <string name="successful_list_update">Personajes actualizado exitosamente</string>
    <string name="successful_delete">Personaje eliminado exitosamente</string>
</resources>